src/test/resources/parsed/invalidSimple.txt
Error while attempting to parse input at line [1], column [1]:
	[string matching regex `\z' expected but `i' found]
invalidSimple { }
^